--- a/index.html
+++ b/index.html
@@ -1,15 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="./styles/reset.css">
-</head>
-<body>
-    <main></main>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Event List App</title>
+    <link rel="stylesheet" href="./styles/reset.css" />
+    <link rel="stylesheet" href="./styles/index.css" />
+    <link rel="stylesheet" href="./styles/add_new_btn.css" />
+    <link rel="stylesheet" href="./styles/event_list.css" />
+  </head>
+  <body>
+    <main class="event-app">
+      <div class="add-new-event">
+        <button class="add-new-event__btn">Add New Event</button>
+      </div>
+      <table class="event-list">
+        <thead>
+          <tr>
+            <th class="event-list__header">Event</th>
+            <th class="event-list__header">Start</th>
+            <th class="event-list__header">End</th>
+            <th class="event-list__header">Actions</th>
+          </tr>
+        </thead>
+        <tbody class="event-list__body"></tbody>
+      </table>
+    </main>
 
-
+    <script src="./api/eventApi.js"></script>
+    <script src="./features/eventView.js"></script>
+    <script src="./features/eventController.js"></script>
+    <script src="./features/eventModel.js"></script>
     <script src="./index.js"></script>
-</body>
+  </body>
 </html>
